macos-timemachine/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: macos-timemachine
  labels:
    name: macos-timemachine
