macos-timemachine/samba-operator-install.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: samba-operator
  namespace: macos-timemachine
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: samba-operator
  template:
    metadata:
      labels:
        app: samba-operator
    spec:
      serviceAccountName: samba-operator
      containers:
      - name: manager
        image: quay.io/samba.org/samba-operator:latest
        command:
        - /manager
        resources:
          limits:
            cpu: 200m
            memory: 300Mi
          requests:
            cpu: 100m
            memory: 20Mi
