macos-timemachine/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: timemachine
  namespace: macos-timemachine
  labels:
    app: timemachine
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  serviceName: timemachine
  replicas: 1
  selector:
    matchLabels:
      app: timemachine
  template:
    metadata:
      labels:
        app: timemachine
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      nodeSelector:
        kubernetes.io/hostname: shion-ubuntu-2505
      containers:
        - name: samba
          image: dockurr/samba:latest
          ports:
            - containerPort: 137
              protocol: UDP
              name: netbios-ns
            - containerPort: 138
              protocol: UDP
              name: netbios-dgm
            - containerPort: 139
              name: netbios-ssn
            - containerPort: 445
              name: microsoft-ds
          lifecycle:
            postStart:
              exec:
                command:
                  - /bin/sh
                  - -c
                  - |
                    # Wait for smbd to start
                    sleep 5
                    # Set password for admin user using PASS env var
                    echo -e "$PASS\n$PASS" | smbpasswd -a -s admin
          volumeMounts:
            - name: tm-data
              mountPath: /storage
            - name: smb-config
              mountPath: /etc/samba/smb.conf
              subPath: smb.conf
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 2000m
              memory: 1024Mi
      volumes:
        - name: smb-config
          configMap:
            name: timemachine-config
  volumeClaimTemplates:
    - metadata:
        name: tm-data
      spec:
        storageClassName: longhorn-hdd
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 4Ti
