macos-timemachine/samba-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: samba-timemachine
  namespace: macos-timemachine
  annotations:
    argocd.argoproj.io/sync-wave: "4"
spec:
  type: LoadBalancer
  ports:
  - name: netbios-ns
    port: 137
    protocol: UDP
    targetPort: 137
  - name: netbios-dgm
    port: 138
    protocol: UDP
    targetPort: 138
  - name: netbios-ssn
    port: 139
    protocol: TCP
    targetPort: 139
  - name: microsoft-ds
    port: 445
    protocol: TCP
    targetPort: 445
  selector:
    samba-operator.samba.org/service: timemachine-share
